# physicsSim

./: CMakeLists.txt  build.bat  readme.md  run.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: Makefile  cmake_install.cmake
libs/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
src/: camera.cpp  camera.h  fragShader.glsl  gameObject.h  imgui.h  input.h  lightShader.glsl  lightShaderV.glsl  main.cpp  physics.h  physicsComponent.h  rect.cpp  rect.h  renderComponent.h  scene.cpp  scene.h  shader.cpp  shader.h  shader.vertShader  userData.h  vertShader.glsl  window.cpp  window.h
